# stock_app

./: .gitignore  analysis.py  main.py  pyproject.toml  requirements.txt  utilities.py
