[project]
name = "stock-prediction-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.7.1",
    "pywavelets>=1.4.1",
    "ratelimit>=2.2.1",
    "requests>=2.31.0",
    "scikit-learn>=1.2.2",
    "scipy>=1.10.1",
]
